# indicator-upower

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  clickable.json  clickable.yaml  de.po  es.po  indicator-upower-helper.json  indicator-upower.apparmor  indicator-upower.application  indicator-upower.desktop  indicator-upower.desktop.in  indicator-upower.service  main.cpp  manifest.json.in
.github/: FUNDING.yml
.github/workflows/: ci.yml  debug.yml
docs/: add_device.md  dbus_introspection.md  fairphone5.md  limiting-charge.md
indicator/: 90-charging_enabled.rules  CMakeLists.txt  bhdouglass-indicator-weather.py  com.ernesst.indicator.upower  devices.json  ernesst-indicator-upower-bkp.py  ernesst-indicator-upower.conf  ernesst-indicator-upower.py  ernesst-indicator-upowerWIP.py  indicator-upower.service  install.sh  number.py  uninstall.sh  upower.indicator
plugins/Indicator/: CMakeLists.txt  commandrunner.cpp  indicator.cpp  indicator.h  plugin.cpp  settings.cpp  settings.h
po/: CMakeLists.txt  de.po  fr.po  indicator-upower-nl.po  indicator-upower.pot  indicator-weather-de.po  indicator-weather-fr.po  indicator-weather-nl.po  indicator-weather-pl.po  indicator-weather.pot  nl.po
qml/: AboutPage.qml  CoordHelp.qml  Main.qml  Main2.qml  SettingsPage.qml
